kube/web-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web
  namespace: sevtech
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: sevtech
          image: 'itzg/minecraft-server'
          ports:
            - containerPort: 25565
          volumeMounts:
            - name: sevtech-storage
              mountPath: /data/FeedTheBeast/backups
      volumes:
        - name: sevtech-storage
          persistentVolumeClaim:
            claimName: sevtech-pvc-storage
