kube/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: sevtech
spec:
  ports:
    - port: 80
      targetPort: 25565
  selector:
    app: web
