kube/web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ipsNeeded: '1'
  name: web
  namespace: sevtech
spec:
  backend:
    serviceName: web
    servicePort: 1
